Remove "Recipe" from h1

--- a/recipes/chicken-enchiladas.html
+++ b/recipes/chicken-enchiladas.html
@@ -7,6 +7,6 @@
     <title>Chicken Enchiladas Recipe</title>
   </head>
   <body>
-    <h1>Chicken Enchiladas Recipe</h1>
+    <h1>Chicken Enchiladas</h1>
   </body>
 </html>
