--- a/recipes/chicken-enchiladas.html
+++ b/recipes/chicken-enchiladas.html
@@ -13,5 +13,15 @@
       alt="Chicken Enchiladas image"
       width="400px"
     />
+    <h3>Description</h3>
+    <p>
+      This chicken enchilada recipe is easy to make with tortillas, tender
+      chicken, and a deliciously cheesy sauce for a family-pleasing Mexican
+      meal.
+    </p>
+    <p>
+      This chicken enchilada recipe couldn't be easier to make with simple
+      ingredients.
+    </p>
   </body>
 </html>
