--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a>
+    <ul>
+      <li>
+        <a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a>
+      </li>
+      <li><a href="./recipes/pizza-dough.html">Thin-Crust Pizza Dough</a></li>
+      <li><a href="./recipes/macaroni-cheese.html">Macaroni and Cheese</a></li>
+    </ul>
   </body>
 </html>
