--- a/recipes/macaroni-cheese.html
+++ b/recipes/macaroni-cheese.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <h1>Macaroni and Cheese</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/bNRRCp3_rGakXb8wSbjYDWfeZqs=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/238691-Simple-Macaroni-And-Cheese-mfs_008-b32db5aa505041acbe958aedb81d29e9.jpg"
-      alt="Macaroni and Cheese"
-      width="400px"
-    />
+    <img src="../images/macaroni-cheese.jpg" alt="Macaroni and Cheese" />
     <h3>Description</h3>
     <p>
       Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and
