--- a/recipes/pizza-dough.html
+++ b/recipes/pizza-dough.html
@@ -8,11 +8,7 @@
   </head>
   <body>
     <h1>Thin-Crust Pizza Dough</h1>
-    <img
-      src="https://www.allrecipes.com/thmb/0tu2RTrRhpNKEypfe0ZQxIu6Nas=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/4475700-6211dfa93fcb4473a42a08ba757bb915.jpg"
-      alt="Pizza image"
-      width="400px"
-    />
+    <img src="../images/pizza.jpg" alt="Pizza image" />
     <h3>Description</h3>
     <p>
       This thin-crust pizza dough recipe is ready to bake in just 15 minutes
