--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <h1>Odin Recipes</h1>
+    <img src="./images/recipes.jpg" alt="Recipe image" />
     <ul>
       <li>
         <a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a>
