--- a/recipes/pizza-dough.html
+++ b/recipes/pizza-dough.html
@@ -5,43 +5,46 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Thin-Crust Pizza Dough Recipe</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <h1>Thin-Crust Pizza Dough</h1>
-    <img src="../images/pizza.jpg" alt="Pizza image" />
-    <h3>Description</h3>
-    <p>
-      This thin-crust pizza dough recipe is ready to bake in just 15 minutes
-      with deliciously crisp results.
-    </p>
-    <p>
-      This delicious thin crust pizza dough recipe is so low maintenance, you
-      can throw it together in just 15 minutes.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>
-        Yeast: This thin crust pizza dough starts with one teaspoon of active
-        dry yeast.
-      </li>
-      <li>
-        Sugar and water: Activate the yeast in white sugar and lukewarm water.
-      </li>
-      <li>
-        Flour: This crispy thin crust calls for all-purpose flour instead of
-        bread flour.
-      </li>
-      <li>
-        Salt: Salt tightens the gluten structure, which strengthens the dough
-        and makes it more elastic.
-      </li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>Activate the yeast with sugar and water.</li>
-      <li>Make the dough.</li>
-      <li>Knead the dough</li>
-      <li>Roll the dough into a circle.</li>
-    </ol>
+    <div>
+      <h1>Thin-Crust Pizza Dough</h1>
+      <img src="../images/pizza.jpg" alt="Pizza image" />
+      <h3>Description</h3>
+      <p>
+        This thin-crust pizza dough recipe is ready to bake in just 15 minutes
+        with deliciously crisp results.
+      </p>
+      <p>
+        This delicious thin crust pizza dough recipe is so low maintenance, you
+        can throw it together in just 15 minutes.
+      </p>
+      <h3>Ingredients</h3>
+      <ul class="center-list">
+        <li>
+          Yeast: This thin crust pizza dough starts with one teaspoon of active
+          dry yeast.
+        </li>
+        <li>
+          Sugar and water: Activate the yeast in white sugar and lukewarm water.
+        </li>
+        <li>
+          Flour: This crispy thin crust calls for all-purpose flour instead of
+          bread flour.
+        </li>
+        <li>
+          Salt: Salt tightens the gluten structure, which strengthens the dough
+          and makes it more elastic.
+        </li>
+      </ul>
+      <h3>Steps</h3>
+      <ol class="center-list">
+        <li>Activate the yeast with sugar and water.</li>
+        <li>Make the dough.</li>
+        <li>Knead the dough</li>
+        <li>Roll the dough into a circle.</li>
+      </ol>
+    </div>
   </body>
 </html>
