--- a/index.html
+++ b/index.html
@@ -10,12 +10,16 @@
   <body>
     <h1>Odin Recipes</h1>
     <img src="./images/recipes.jpg" alt="Recipe image" />
-    <ul>
-      <li>
-        <a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a>
-      </li>
-      <li><a href="./recipes/pizza-dough.html">Thin-Crust Pizza Dough</a></li>
-      <li><a href="./recipes/macaroni-cheese.html">Macaroni and Cheese</a></li>
-    </ul>
+    <div>
+      <ul class="center-list">
+        <li>
+          <a href="./recipes/chicken-enchiladas.html">Chicken Enchiladas</a>
+        </li>
+        <li><a href="./recipes/pizza-dough.html">Thin-Crust Pizza Dough</a></li>
+        <li>
+          <a href="./recipes/macaroni-cheese.html">Macaroni and Cheese</a>
+        </li>
+      </ul>
+    </div>
   </body>
 </html>
