--- a/recipes/macaroni-cheese.html
+++ b/recipes/macaroni-cheese.html
@@ -5,53 +5,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Macaroni and Cheese Recipe</title>
+    <link rel="stylesheet" href="../style.css" />
   </head>
   <body>
-    <h1>Macaroni and Cheese</h1>
-    <img src="../images/macaroni-cheese.jpg" alt="Macaroni and Cheese" />
-    <h3>Description</h3>
-    <p>
-      Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and
-      cheese often costs forty or fifty dollars to prepare when you have so many
-      expensive cheeses, but they aren't always the best tasting. This simple
-      recipe is cheap and tasty.
-    </p>
-    <p>
-      Looking for a homemade alternative to boxed mac and cheese that's just as
-      quick and easy? This stove-top mac and cheese uses staple ingredients and
-      comes together in just 25 minutes. You'll want to bookmark this recipe for
-      busy weeknights. The good news is, it's so simple that once you make it a
-      couple times, you'll likely have it memorized.
-    </p>
-    <h3>Ingredients</h3>
-    <ul>
-      <li>1 (8 ounce) box elbow macaroni</li>
-      <li>¼ cup butter</li>
-      <li>¼ cup all-purpose flour</li>
-      <li>½ teaspoon salt</li>
-      <li>ground black pepper to taste</li>
-      <li>2 cups milk</li>
-      <li>2 cups shredded Cheddar cheese</li>
-    </ul>
-    <h3>Steps</h3>
-    <ol>
-      <li>
-        Bring a large pot of lightly salted water to a boil. Cook elbow macaroni
-        in the boiling water, stirring occasionally until cooked through but
-        firm to the bite, 8 minutes.
-      </li>
-      <li>At the same time, melt butter in a saucepan over medium heat.</li>
-      <li>
-        Add flour, salt, and pepper and stir until smooth, about 5 minutes.
-      </li>
-      <li>
-        Pour in milk slowly, while stirring continuously. Continue to cook and
-        stir until mixture is smooth and bubbling, about 5 minutes, making sure
-        the milk doesn't burn.
-      </li>
-      <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
-      <li>Drain macaroni and fold into cheese sauce until coated.</li>
-      <li>Serve hot and enjoy!</li>
-    </ol>
+    <div>
+      <h1>Macaroni and Cheese</h1>
+      <img src="../images/macaroni-cheese.jpg" alt="Macaroni and Cheese" />
+      <h3>Description</h3>
+      <p>
+        Quick, easy, and tasty macaroni and cheese dish. Fancy, designer mac and
+        cheese often costs forty or fifty dollars<br />
+        to prepare when you have so many expensive cheeses, but they aren't
+        always the best tasting. This simple recipe is cheap and tasty.
+      </p>
+      <p>
+        Looking for a homemade alternative to boxed mac and cheese that's just
+        as quick and easy? This stove-top mac and cheese uses staple ingredients
+        and comes together in just 25 minutes.<br />
+        You'll want to bookmark this recipe for busy weeknights. The good news
+        is, it's so simple that once you make it a couple times, you'll likely
+        have it memorized.
+      </p>
+      <h3>Ingredients</h3>
+      <ul class="center-list">
+        <li>1 (8 ounce) box elbow macaroni</li>
+        <li>¼ cup butter</li>
+        <li>¼ cup all-purpose flour</li>
+        <li>½ teaspoon salt</li>
+        <li>ground black pepper to taste</li>
+        <li>2 cups milk</li>
+        <li>2 cups shredded Cheddar cheese</li>
+      </ul>
+      <h3>Steps</h3>
+      <ol class="center-list">
+        <li>
+          Bring a large pot of lightly salted water to a boil. Cook elbow
+          macaroni in the boiling water, stirring occasionally until cooked
+          through but firm to the bite, 8 minutes.
+        </li>
+        <li>At the same time, melt butter in a saucepan over medium heat.</li>
+        <li>
+          Add flour, salt, and pepper and stir until smooth, about 5 minutes.
+        </li>
+        <li>
+          Pour in milk slowly, while stirring continuously. Continue to cook and
+          stir until mixture is smooth and bubbling, about 5 minutes, making
+          sure the milk doesn't burn.
+        </li>
+        <li>Add Cheddar cheese and stir until melted, 2 to 4 minutes.</li>
+        <li>Drain macaroni and fold into cheese sauce until coated.</li>
+        <li>Serve hot and enjoy!</li>
+      </ol>
+    </div>
   </body>
 </html>
